Fixes silvio / release 1.0.4

--- a/roles/filetree_create/defaults/main.yml
+++ b/roles/filetree_create/defaults/main.yml
@@ -43,7 +43,7 @@ other_template_list:
   - { template: casc_ctrl_cd_webhook_trigger.yml.j2, dest: casc_ctrl_cd_webhook_trigger.yml }
   - { template: casc_ctrl_drop_diff.yml.j2, dest: casc_ctrl_drop_diff.yml }
   - { template: gitlab-ci.yml.j2, dest: .gitlab-ci.yml }
-  - { template: yamllint.yml.j2, dest: .yamllint.yml.j2 }
+  - { template: yamllint.yml.j2, dest: .yamllint.yml }
   - { template: requirements.yml.j2, dest: collections/requirements.yml }
   - { template: README.md.j2, dest: README.md }
   - { template: gitignore.j2, dest: .gitignore }
