--- a/roles/gitlab_setup/tasks/gitlab_init.yml
+++ b/roles/gitlab_setup/tasks/gitlab_init.yml
@@ -21,7 +21,7 @@
     default_branch:  "{{ gitlab_default_branch }}"
     visibility: "{{ gitlab_visibility }}"
     squash_option: "{{ gitlab_squash_option | default('never') }}"
-    only_allow_merge_if_pipeline_succeeds: "{{ gitlab_only_allow_merge_if_pipeline_succeeds | default(true) }}"
+    only_allow_merge_if_pipeline_succeeds: "{{ gitlab_only_allow_merge_if_pipeline_succeeds | default(false) }}"
   register: gitlab_project_creation
 
 - name: Set git clone repo
