--- a/examples/github_setup.yml
+++ b/examples/github_setup.yml
@@ -5,11 +5,11 @@
   vars:
     github_api_url: https://api.github.com
     github_url: https://github.com
-    github_api_user_mail: agarciac@redhat.com
-    github_api_user: adonisgarciac
-    github_api_token: "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"
+    github_api_user_mail: ToDo
+    github_api_user: ToDo
+    github_api_token: "ToDo"
     github_repository: testrepo
-    github_organization: adonisorg
+    github_organization: org
     github_private: true
     github_http_protocol: https
     github_branches:
@@ -26,7 +26,7 @@
     other_template_list:
       - { template: casc_ctrl_config.yml.j2, dest:  casc_ctrl_config.yml }
       - { template: casc_ctrl_drop_diff.yml.j2, dest: casc_ctrl_drop_diff.yml }
-      - { template: casc_ctrl_cd_webhook_trigger_github.yml.j2, dest: casc_ctrl_cd_webhook_trigger.yml }
+      - { template: casc_ctrl_cd_webhook_trigger.yml.j2, dest: casc_ctrl_cd_webhook_trigger.yml }
       - { template: requirements.yml.j2, dest: collections/requirements.yml }
       - { template: README_github.md.j2, dest: README.md }
       - { template: gitignore.j2, dest: .gitignore }
