--- a/galaxy.yml
+++ b/galaxy.yml
@@ -8,7 +8,7 @@ namespace: automationiberia
 name: casc_setup
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.1.0
+version: 2.0.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -18,6 +18,7 @@ readme: README.md
 authors:
 - silvinux <silvinux7@gmail.com>
 - adonis <adonis@redhat.com>
+- ivanaragones <iaragone@redhat.com>
 
 
 ### OPTIONAL but strongly recommended
