--- a/roles/gitlab_setup/tasks/create_project_token.yml
+++ b/roles/gitlab_setup/tasks/create_project_token.yml
@@ -29,9 +29,9 @@
 
 - debug:
     msg:
-      - "{{ repo_id_res.json }}
-      - "{{ repo_id_res.json[0] }}
-      - "{{ repo_id_res.json[0].id }}
+      - "{{ repo_id_res.json }}"
+      - "{{ repo_id_res.json[0] }}"
+      - "{{ repo_id_res.json[0].id }}"
 
 #    curl --request POST --header "PRIVATE-TOKEN: <your_access_token>" \
 #    --header "Content-Type:application/json" \
