create project access token. adding artifacts

--- a/roles/gitlab_setup/tasks/create_project_token.yml
+++ b/roles/gitlab_setup/tasks/create_project_token.yml
@@ -43,7 +43,14 @@
     url: "{{ gitlab_api_url }}/api/v4/projects/{{ repo_id_res.json[0].id }}/deploy_tokens/"
     method: POST
     #body: "{{ lookup('ansible.builtin.file','issue.json') }}"
-    body: '{"name": "CasC deploy token", "expires_at": "3000-01-01", "access_level": 50, "scopes": ["api", "read_repository"]}'
+    #body: '{"name": "CasC deploy token", "expires_at": "3000-01-01", "access_level": 50, "scopes": ["api"]}'
+    body:
+      name: "CasC deploy token"
+      expires_at: "3000-01-01"
+      access_level: 50
+      scopes:
+        - api
+        - read_repository
     # status_code: 201
     body_format: json
     return_content: true
